--- a/avatarURL.html
+++ b/avatarURL.html
@@ -2,7 +2,8 @@
 <html>
 <head>
 	<meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1">
-	
+	<!-- Need to include  this liner for the pre-chat form CSS -->
+	<link rel="stylesheet" type="text/css" href="updated_css.css" />
 	<style type='text/css'>
 	.embeddedServiceHelpButton .helpButton .uiButton {
 		background-color: #40CED9;
@@ -11,219 +12,7 @@
 	.embeddedServiceHelpButton .helpButton .uiButton:focus {
 		outline: 1px solid #40CED9;
 		@charset "UTF-8";
-.slds-var-p-around_medium{
-  padding:1rem;
-}
 
-.slds-var-p-bottom_small{
-  padding-bottom:0.75rem;
-}
-.slds-form-element__label{
-  overflow-wrap:break-word;
-  word-wrap:break-word;
-  -webkit-hyphens:auto;
-      -ms-hyphens:auto;
-          hyphens:auto;
-  display:inline-block;
-  color:#444444;
-  font-size:0.75rem;
-  padding-right:0.5rem;
-  padding-top:0.25rem;
-  margin-bottom:0.125rem;
-}
-[dir=rtl] .slds-form-element__label{
-  /*! @noflip */
-  padding-right:0;
-  /*! @noflip */
-  padding-left:0.5rem;
-}
-.slds-form-element__label:empty{
-  margin:0;
-}
-.slds-form-element_readonly .slds-form-element__label{
-  margin-bottom:0;
-}
-
-.slds-radio .slds-form-element__label{
-  display:inline;
-  vertical-align:middle;
-  font-size:0.8125rem;
-}
-
-.slds-checkbox.slds-checkbox_stacked .slds-form-element__label{
-  font-size:0.75rem;
-}
-
-.slds-checkbox .slds-checkbox__label .slds-form-element__label{
-  display:inline;
-  vertical-align:middle;
-  font-size:0.8125rem;
-}
-
-.slds-form_inline .slds-form-element,
-.slds-form_inline .slds-form-element__label,
-.slds-form_inline .slds-form-element__control,
-.slds-form--inline .slds-form-element,
-.slds-form--inline .slds-form-element__label,
-.slds-form--inline .slds-form-element__control{
-  display:block;
-}
-
-@media (min-width: 30em){
-  .slds-form_inline .slds-form-element,
-.slds-form--inline .slds-form-element{
-    margin-right:0.5rem;
-  }
-  .slds-form_inline .slds-form-element + .slds-form-element,
-.slds-form--inline .slds-form-element + .slds-form-element{
-    margin-top:0;
-  }
-  .slds-form_inline .slds-form-element,
-.slds-form_inline .slds-form-element__label,
-.slds-form_inline .slds-form-element__control,
-.slds-form--inline .slds-form-element,
-.slds-form--inline .slds-form-element__label,
-.slds-form--inline .slds-form-element__control{
-    display:inline-block;
-    vertical-align:middle;
-    margin-bottom:0;
-  }
-  
-  .slds-form_compound .slds-form-element__row .slds-form-element__label,
-.slds-form--compound .slds-form-element__row .slds-form-element__label{
-  padding-top:0;
-}
-
-.slds-form-element_stacked .slds-form-element__label,
-.slds-form-element_stacked .slds-form-element__control,
-.slds-form_stacked .slds-form-element .slds-form-element__label,
-.slds-form_stacked .slds-form-element .slds-form-element__control,
-.slds-form_horizontal .slds-form-element_stacked .slds-form-element__label,
-.slds-form_horizontal .slds-form-element_stacked .slds-form-element__control{
-  border-bottom:0;
-  padding-left:0;
-}
-
-@media (min-width: 48em){
-  .slds-form-element_horizontal.slds-form-element_1-col .slds-form-element__label,
-.slds-form_horizontal .slds-form-element.slds-form-element_1-col .slds-form-element__label,
-.slds-form_stacked .slds-form-element_horizontal.slds-form-element_1-col .slds-form-element__label{
-    max-width:calc((50% - 33.333%) - 1.25rem);
-  }
-  
-  @media (min-width: 48em){
-  .slds-form-element_horizontal .slds-form-element__label,
-.slds-form_horizontal .slds-form-element .slds-form-element__label,
-.slds-form_stacked .slds-form-element_horizontal .slds-form-element__label{
-    float:left;
-    max-width:calc(33% - 1.25rem);
-    -ms-flex-preferred-size:calc(33% - 1.25rem);
-        flex-basis:calc(33% - 1.25rem);
-    margin-bottom:0;
-    position:relative;
-    z-index:1;
-  }
-  .slds-form-element_horizontal .slds-form-element__control,
-.slds-form_horizontal .slds-form-element .slds-form-element__control,
-.slds-form_stacked .slds-form-element_horizontal .slds-form-element__control{
-    padding-left:33%;
-    clear:none;
-  }
-  
-    .slds-form-element_horizontal .slds-checkbox:not(.slds-checkbox_stacked) .slds-form-element__label,
-.slds-form-element_horizontal .slds-radio .slds-form-element__label,
-.slds-form_horizontal .slds-form-element .slds-checkbox:not(.slds-checkbox_stacked) .slds-form-element__label,
-.slds-form_horizontal .slds-form-element .slds-radio .slds-form-element__label,
-.slds-form_stacked .slds-form-element_horizontal .slds-checkbox:not(.slds-checkbox_stacked) .slds-form-element__label,
-.slds-form_stacked .slds-form-element_horizontal .slds-radio .slds-form-element__label{
-    position:relative;
-    float:none;
-    max-width:100%;
-    width:auto;
-  }
-  
-    .slds-form-element_horizontal .slds-form-element__row .slds-form-element__label,
-.slds-form-element_horizontal .slds-form-element__row .slds-form-element__control,
-.slds-form-element_horizontal .slds-dueling-list__column .slds-form-element__label,
-.slds-form_horizontal .slds-form-element .slds-form-element__row .slds-form-element__label,
-.slds-form_horizontal .slds-form-element .slds-form-element__row .slds-form-element__control,
-.slds-form_horizontal .slds-form-element .slds-dueling-list__column .slds-form-element__label,
-.slds-form_stacked .slds-form-element_horizontal .slds-form-element__row .slds-form-element__label,
-.slds-form_stacked .slds-form-element_horizontal .slds-form-element__row .slds-form-element__control,
-.slds-form_stacked .slds-form-element_horizontal .slds-dueling-list__column .slds-form-element__label{
-    width:auto;
-    max-width:100%;
-    -ms-flex-preferred-size:auto;
-        flex-basis:auto;
-    float:none;
-    position:relative;
-    padding-left:0;
-    margin-bottom:0;
-  }
-  
-  .slds-form-element_compound .slds-form-element__row .slds-form-element__label{
-  padding-top:0;
-}
-
-.slds-email-composer__combobox .slds-form-element__label{
-  position:absolute;
-  left:0.75rem;
-  top:50%;
-  -webkit-transform:translateY(-50%);
-          transform:translateY(-50%);
-}
-
-.slds-form-element__label{
-  overflow-wrap:break-word;
-  word-wrap:break-word;
-  -webkit-hyphens:auto;
-      -ms-hyphens:auto;
-          hyphens:auto;
-  display:inline-block;
-  color:#444444;
-  font-size:0.75rem;
-  padding-right:0.5rem;
-  padding-top:0.25rem;
-  margin-bottom:0.125rem;
-}
-
-[dir=rtl] .slds-form-element__label{
-  /*! @noflip */
-  padding-right:0;
-  /*! @noflip */
-  padding-left:0.5rem;
-}
-
-.slds-form-element__label:empty{
-  margin:0;
-}
-
-.slds-form-element_readonly .slds-form-element__label{
-  margin-bottom:0;
-}
-
-.slds-no-flex{
-  -webkit-box-flex:0;
-      -ms-flex:none;
-          flex:none;
-}
-
-.slds-float_left,
-.slds-float--left{
-  float:left;
-}
-
-.slds-text-color_destructive{
-  color:#ea001e;
-}
-
-
-.slds-var-p-right_xxx-small{
-  padding-right:0.125rem;
-}
-
-
-	}
 </style>
 
 <script type='text/javascript' src='https://service.force.com/embeddedservice/5.0/esw.min.js'></script>
