--- a/avatarURL.html
+++ b/avatarURL.html
@@ -64,6 +64,16 @@
 
 		embedded_svc.settings.enabledFeatures = ['LiveAgent'];
 		embedded_svc.settings.entryFeature = 'LiveAgent';
+		
+		embedded_svc.settings.extraPrechatFormDetails = [
+					{"label":"First Name", "transcriptFields": ["Customer_First_Name__c"]},
+					{"label":"Last Name", "transcriptFields": ["Customer_Last_Name__c"]},
+					{"label":"Email", "transcriptFields": ["Customer_Email__c"]},
+					{"label":"Mobile", "transcriptFields": ["Customer_Phone__c"]},
+					{"label":"Member ID", "transcriptFields": ["Customer_Member_ID__c"]},
+					{"label":"Enquiry Type", "transcriptFields": ["Customer_Enquiry_Type__c"]},
+					{"label":"Subject", "transcriptFields": ["Customer_Subject__c"]}
+				];
 
 		embedded_svc.init(
 			'https://capitaland--prodtest.sandbox.my.salesforce.com',
