--- a/avatarURL.html
+++ b/avatarURL.html
@@ -4,43 +4,22 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1">
 	<!-- Need to include  this liner for the pre-chat form CSS -->
 	<link rel="stylesheet" type="text/css" href="updated_css.css" />
-	<!-- <style type='text/css'>
+	<style type='text/css'>
 	.embeddedServiceHelpButton .helpButton .uiButton {
-		background-color: #40CED9;
+		background-color: #005290;
 		font-family: "Arial", sans-serif;
 	}
 	.embeddedServiceHelpButton .helpButton .uiButton:focus {
-		outline: 1px solid #40CED9;
-		@charset "UTF-8";
+		outline: 1px solid #005290;
+	}
+</style>
 
-</style>-->
-<style type='text/css'>
-			.embeddedServiceHelpButton .helpButton .uiButton {
-				background: rgb(64, 206, 217) !important;
-				background-color: rgb(64, 206, 217);
-				font-family: "Arial", sans-serif;
-			}
-			
-			.embeddedServiceHelpButton .helpButton .uiButton:focus {
-				outline: 1px solid rgb(64, 206, 217);
-			}
-			
-			.message {
-				background-color: rgb(64, 206, 217) !important;
-				border-style: none !important;
-				border-width: 1px !important;
-				color: #fff !important;
-				padding: 6px 8px 6px 6px;
-				margin: 0px 0px !important;
-			}
-		</style>
 
 <script type='text/javascript' src='https://service.force.com/embeddedservice/5.0/esw.min.js'></script>
 <script type='text/javascript'>
 	var initESW = function(gslbBaseURL) {
 		embedded_svc.settings.displayHelpButton = true; //Or false
 		embedded_svc.settings.language = ''; //For example, enter 'en' or 'en-US'
-		
 		embedded_svc.settings.prechatBackgroundImgURL = 'https://capitaland--prodtest.sandbox.my.site.com/resource/1669602976000/casey320x100?'
 		embedded_svc.settings.smallCompanyLogoImgURL = 'https://capitaland--prodtest.sandbox.my.site.com/resource/1669602931000/casey36x36?'
 		embedded_svc.settings.waitingStateBackgroundImgURL = 'https://capitaland--prodtest.sandbox.my.site.com/resource/1669602957000/casey250x60?'
@@ -64,29 +43,19 @@
 
 		embedded_svc.settings.enabledFeatures = ['LiveAgent'];
 		embedded_svc.settings.entryFeature = 'LiveAgent';
-		
-		embedded_svc.settings.extraPrechatFormDetails = [
-					{"label":"First Name", "transcriptFields": ["Customer_First_Name__c"]},
-					{"label":"Last Name", "transcriptFields": ["Customer_Last_Name__c"]},
-					{"label":"Email", "transcriptFields": ["Customer_Email__c"]},
-					{"label":"Mobile", "transcriptFields": ["Customer_Phone__c"]},
-					{"label":"Member ID", "transcriptFields": ["Customer_Member_ID__c"]},
-					{"label":"Enquiry Type", "transcriptFields": ["Customer_Enquiry_Type__c"]},
-					{"label":"Subject", "transcriptFields": ["Customer_Subject__c"]}
-				];
 
 		embedded_svc.init(
-			'https://capitaland--prodtest.sandbox.my.salesforce.com',
-			'https://capitaland--prodtest.sandbox.my.site.com/',
+			'https://capitaland--dev.sandbox.my.salesforce.com',
+			'https://capitaland--dev.sandbox.my.site.com/',
 			gslbBaseURL,
-			'00D9D0000000Tjm',
-			'Chat_Support_Team',
+			'00D9D0000000Xga',
+			'Test_LWC_Pack',
 			{
 				baseLiveAgentContentURL: 'https://c.la1-c1cs-ukb.salesforceliveagent.com/content',
-				deploymentId: '5725j000000H388',
-				buttonId: '5735j000000H3nc',
+				deploymentId: '5729D0000004CXs',
+				buttonId: '5739D0000004CuU',
 				baseLiveAgentURL: 'https://d.la1-c1cs-ukb.salesforceliveagent.com/chat',
-				eswLiveAgentDevName: 'Chat_Support_Team',
+				eswLiveAgentDevName: 'EmbeddedServiceLiveAgent_Parent04I9D00000000RvUAI_1830c83936b',
 				isOfflineSupportEnabled: false
 			}
 		);
@@ -94,7 +63,7 @@
 
 	if (!window.embedded_svc) {
 		var s = document.createElement('script');
-		s.setAttribute('src', 'https://capitaland--prodtest.sandbox.my.salesforce.com/embeddedservice/5.0/esw.min.js');
+		s.setAttribute('src', 'https://capitaland--dev.sandbox.my.salesforce.com/embeddedservice/5.0/esw.min.js');
 		s.onload = function() {
 			initESW(null);
 		};
