--- a/avatarURL.html
+++ b/avatarURL.html
@@ -4,7 +4,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1">
 	<!-- Need to include  this liner for the pre-chat form CSS -->
 	<link rel="stylesheet" type="text/css" href="updated_css.css" />
-	<style type='text/css'>
+	<!--<style type='text/css'>
 	.embeddedServiceHelpButton .helpButton .uiButton {
 		background-color: #005290;
 		font-family: "Arial", sans-serif;
@@ -12,7 +12,27 @@
 	.embeddedServiceHelpButton .helpButton .uiButton:focus {
 		outline: 1px solid #005290;
 	}
-</style>
+</style>-->
+<style type='text/css'>
+			.embeddedServiceHelpButton .helpButton .uiButton {
+				background: rgb(64, 206, 217) !important;
+				background-color: rgb(64, 206, 217);
+				font-family: "Arial", sans-serif;
+			}
+			
+			.embeddedServiceHelpButton .helpButton .uiButton:focus {
+				outline: 1px solid rgb(64, 206, 217);
+			}
+			
+			.message {
+				background-color: rgb(64, 206, 217) !important;
+				border-style: none !important;
+				border-width: 1px !important;
+				color: #fff !important;
+				padding: 6px 8px 6px 6px;
+				margin: 0px 0px !important;
+			}
+		</style>
 
 
 <script type='text/javascript' src='https://service.force.com/embeddedservice/5.0/esw.min.js'></script>
@@ -26,7 +46,7 @@
 		embedded_svc.settings.avatarImgURL = 'https://capitaland--prodtest.sandbox.my.site.com/resource/1669602911000/casey40x40?'
 		embedded_svc.settings.chatbotAvatarImgURL = 'https://capitaland--prodtest.sandbox.my.site.com/resource/1669602911000/casey40x40?'
 
-		//embedded_svc.settings.defaultMinimizedText = '...'; //(Defaults to Chat with an Expert)
+		embedded_svc.settings.defaultMinimizedText = 'Chat with us'; //(Defaults to Chat with an Expert)
 		//embedded_svc.settings.disabledMinimizedText = '...'; //(Defaults to Agent Offline)
 
 		//embedded_svc.settings.loadingText = ''; //(Defaults to Loading)
