--- a/avatarURL.html
+++ b/avatarURL.html
@@ -40,11 +40,13 @@
 	var initESW = function(gslbBaseURL) {
 		embedded_svc.settings.displayHelpButton = true; //Or false
 		embedded_svc.settings.language = ''; //For example, enter 'en' or 'en-US'
-		embedded_svc.settings.prechatBackgroundImgURL = 'https://capitaland--prodtest.sandbox.my.site.com/resource/1669602976000/casey320x100?'
-		embedded_svc.settings.smallCompanyLogoImgURL = 'https://capitaland--prodtest.sandbox.my.site.com/resource/1669602931000/casey36x36?'
-		embedded_svc.settings.waitingStateBackgroundImgURL = 'https://capitaland--prodtest.sandbox.my.site.com/resource/1669602957000/casey250x60?'
-		embedded_svc.settings.avatarImgURL = 'https://capitaland--prodtest.sandbox.my.site.com/resource/1669602911000/casey40x40?'
-		embedded_svc.settings.chatbotAvatarImgURL = 'https://capitaland--prodtest.sandbox.my.site.com/resource/1669602911000/casey40x40?'
+		
+		//Chat Icons 
+		embedded_svc.settings.prechatBackgroundImgURL = 'https://capitaland--prodtest.sandbox.my.site.com/resource/1669602976000/casey320x100?';
+		embedded_svc.settings.smallCompanyLogoImgURL = 'https://capitaland--prodtest.sandbox.my.site.com/resource/1669602931000/casey36x36?';
+		embedded_svc.settings.waitingStateBackgroundImgURL = 'https://capitaland--prodtest.sandbox.my.site.com/resource/1669602957000/casey250x60?';
+		embedded_svc.settings.avatarImgURL = 'https://capitaland--prodtest.sandbox.my.site.com/resource/1669602911000/casey40x40?';
+		embedded_svc.settings.chatbotAvatarImgURL = 'https://capitaland--prodtest.sandbox.my.site.com/resource/1669602911000/casey40x40?';
 
 		embedded_svc.settings.defaultMinimizedText = 'Chat with us'; //(Defaults to Chat with an Expert)
 		//embedded_svc.settings.disabledMinimizedText = '...'; //(Defaults to Agent Offline)
