--- a/avatarURL.html
+++ b/avatarURL.html
@@ -3,7 +3,7 @@
 <head>
 	<meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1">
 	<!-- Need to include  this liner for the pre-chat form CSS -->
-	<link rel="stylesheet" type="text/css" href="updated_css.css" />
+	<!-- <link rel="stylesheet" type="text/css" href="updated_css.css" />-->
 	<!--<style type='text/css'>
 	.embeddedServiceHelpButton .helpButton .uiButton {
 		background-color: #005290;
