--- a/avatarURL.html
+++ b/avatarURL.html
@@ -15,15 +15,16 @@
 </style>-->
 <style type='text/css'>
 	.embeddedServiceHelpButton .helpButton .uiButton {
-		background-color: #005290;
+		background-color: #40CED9;
 		font-family: "Arial", sans-serif;
 	}
 	.embeddedServiceHelpButton .helpButton .uiButton:focus {
-		outline: 1px solid #005290;
+		outline: 1px solid #40CED9;
 	}
 </style>
 
 
+<script type='text/javascript' src='https://service.force.com/embeddedservice/5.0/esw.min.js'></script>
 <script type='text/javascript' src='https://service.force.com/embeddedservice/5.0/esw.min.js'></script>
 <script type='text/javascript'>
 	var initESW = function(gslbBaseURL) {
@@ -37,7 +38,7 @@
 		embedded_svc.settings.avatarImgURL = 'https://capitaland--dev.sandbox.my.site.com/resource/1669365647000/casey40x40';
 		embedded_svc.settings.chatbotAvatarImgURL = 'https://capitaland--dev.sandbox.my.site.com/resource/1669365647000/casey40x40';
 
-		embedded_svc.settings.defaultMinimizedText = 'Chat with us'; //(Defaults to Chat with an Expert)
+		embedded_svc.settings.defaultMinimizedText = 'Chat With Us' //(Defaults to Chat with an Expert)
 		//embedded_svc.settings.disabledMinimizedText = '...'; //(Defaults to Agent Offline)
 
 		//embedded_svc.settings.loadingText = ''; //(Defaults to Loading)
@@ -51,22 +52,31 @@
 		//embedded_svc.settings.prepopulatedPrechatFields = {}; //Sets the auto-population of pre-chat form fields
 		//embedded_svc.settings.fallbackRouting = []; //An array of button IDs, user IDs, or userId_buttonId
 		//embedded_svc.settings.offlineSupportMinimizedText = '...'; //(Defaults to Contact Us)
+		embedded_svc.settings.extraPrechatFormDetails = [
+					{"label":"First Name", "transcriptFields": ["Customer_First_Name__c"]},
+					{"label":"Last Name", "transcriptFields": ["Customer_Last_Name__c"]},
+					{"label":"Email", "transcriptFields": ["Customer_Email__c"]},
+					{"label":"Mobile", "transcriptFields": ["Customer_Phone__c"]},
+					{"label":"Member ID", "transcriptFields": ["Customer_Member_ID__c"]},
+					{"label":"Enquiry Type", "transcriptFields": ["Customer_Enquiry_Type__c"]},
+					{"label":"Subject", "transcriptFields": ["Customer_Subject__c"]}
+				];
 
 		embedded_svc.settings.enabledFeatures = ['LiveAgent'];
 		embedded_svc.settings.entryFeature = 'LiveAgent';
 
 		embedded_svc.init(
-			'https://capitaland--dev.sandbox.my.salesforce.com',
-			'https://capitaland--dev.sandbox.my.site.com/',
+			'https://capitaland--prodtest.sandbox.my.salesforce.com',
+			'https://capitaland--prodtest.sandbox.my.site.com/',
 			gslbBaseURL,
-			'00D9D0000000Xga',
-			'Test_LWC_Pack',
+			'00D9D0000000Tjm',
+			'Chat_Support_Team',
 			{
 				baseLiveAgentContentURL: 'https://c.la1-c1cs-ukb.salesforceliveagent.com/content',
-				deploymentId: '5729D0000004CXs',
-				buttonId: '5739D0000004CuU',
+				deploymentId: '5725j000000H388',
+				buttonId: '5735j000000H3nc',
 				baseLiveAgentURL: 'https://d.la1-c1cs-ukb.salesforceliveagent.com/chat',
-				eswLiveAgentDevName: 'EmbeddedServiceLiveAgent_Parent04I9D00000000RvUAI_1830c83936b',
+				eswLiveAgentDevName: 'Chat_Support_Team',
 				isOfflineSupportEnabled: false
 			}
 		);
@@ -74,7 +84,7 @@
 
 	if (!window.embedded_svc) {
 		var s = document.createElement('script');
-		s.setAttribute('src', 'https://capitaland--dev.sandbox.my.salesforce.com/embeddedservice/5.0/esw.min.js');
+		s.setAttribute('src', 'https://capitaland--prodtest.sandbox.my.salesforce.com/embeddedservice/5.0/esw.min.js');
 		s.onload = function() {
 			initESW(null);
 		};
@@ -83,6 +93,7 @@
 		initESW('https://service.force.com');
 	}
 </script>
+
 </head>	
 <body>
 The content of the body element is displayed in your browser.
