--- a/avatarURL.html
+++ b/avatarURL.html
@@ -13,6 +13,10 @@
 	.embeddedServiceHelpButton .helpButton .uiButton:focus {
 		outline: 1px solid #40CED9;
 	}
+	
+	.embeddedServiceIcon {
+		display:none;
+	}
 </style>
 
 
