--- a/avatarURL.html
+++ b/avatarURL.html
@@ -15,7 +15,7 @@
 	}
 	
 	.embeddedServiceIcon {
-		display:none;
+		url(https://capitaland--prodtest.sandbox.my.site.com/resource/1669602931000/casey36x36?);
 	}
 </style>
 
