--- a/avatarURL.html
+++ b/avatarURL.html
@@ -32,6 +32,9 @@
 		embedded_svc.settings.waitingStateBackgroundImgURL = 'https://capitaland--prodtest.sandbox.my.site.com/resource/1669602957000/casey250x60?';
 		embedded_svc.settings.avatarImgURL = 'https://capitaland--prodtest.sandbox.my.site.com/resource/1669602911000/casey40x40?';
 		embedded_svc.settings.chatbotAvatarImgURL = 'https://capitaland--prodtest.sandbox.my.site.com/resource/1669602911000/casey40x40?';
+		embedded_svc.settings.displayHelpButton = "https://capitaland--prodtest.sandbox.my.site.com/resource/1669602931000/casey36x36?";
+		
+		
 
 		embedded_svc.settings.defaultMinimizedText = 'Chat With Us' //(Defaults to Chat with an Expert)
 		//embedded_svc.settings.disabledMinimizedText = '...'; //(Defaults to Agent Offline)
