--- a/avatarURL.html
+++ b/avatarURL.html
@@ -13,10 +13,10 @@
 	.embeddedServiceHelpButton .helpButton .uiButton:focus {
 		outline: 1px solid #40CED9;
 	}
-	
-	.embeddedServiceIcon {
-		url(https://capitaland--prodtest.sandbox.my.site.com/resource/1669602931000/casey36x36?);
+	embeddedServiceHelpButton .helpButton .uiButton .embeddedServiceIcon {
+		image: url(https://capitaland--prodtest.sandbox.my.site.com/resource/1669602931000/casey36x36?);
 	}
+	
 </style>
 
 
