--- a/avatarURL.html
+++ b/avatarURL.html
@@ -14,7 +14,7 @@
 		outline: 1px solid #40CED9;
 	}
 	embeddedServiceHelpButton .helpButton .uiButton .embeddedServiceIcon {
-		image: url(https://capitaland--prodtest.sandbox.my.site.com/resource/1669602931000/casey36x36?);
+		image: url(Casey_FA-Xmas_v1_36x36.png)!important;
 	}
 	
 </style>
