--- a/avatarURL.html
+++ b/avatarURL.html
@@ -13,6 +13,12 @@
 	.embeddedServiceHelpButton .helpButton .uiButton:focus {
 		outline: 1px solid #40CED9;
 	}
+	
+	  .embeddedServiceHelpButton .embeddedServiceIcon::before{
+	  content:url(https://capitaland--prodtest.sandbox.my.site.com/resource/1669696394000/casey_Original)!important;
+	  width:20px !important;
+	  height:20px !important;
+	  }
 </style>
 
 
