--- a/prodTest.html
+++ b/prodTest.html
@@ -23,6 +23,19 @@
                 padding: 6px 8px 6px 6px;
                 margin: 0px 0px !important;
             }
+			
+			.embeddedServiceHelpButton .embeddedServiceIcon::before {
+				font-family: “embeddedserviceiconfont”;
+				font-size: 1.25em;
+				content: url(https://capitaland--prodtest.sandbox.my.site.com/resource/1669696394000/casey_Original) !important;
+				speak: none;
+				text-rendering: auto;
+				font-weight: normal;
+				font-variant: normal;
+				text-transform: none;
+				-webkit-font-smoothing: antialiased;
+				-moz-osx-font-smoothing: grayscale;
+			}
         </style>
 
 
