--- a/prodTest.html
+++ b/prodTest.html
@@ -26,7 +26,7 @@
 			
 			.embeddedServiceHelpButton .embeddedServiceIcon::before {
 				font-family: “embeddedserviceiconfont”;
-				font-size: 1.25em;
+				font-size: 5px;
 				content: url(https://capitaland--prodtest.sandbox.my.site.com/resource/1669696394000/casey_Original) !important;
 				speak: none;
 				text-rendering: auto;
