--- a/prodTest.html
+++ b/prodTest.html
@@ -27,7 +27,7 @@
 			.embeddedServiceHelpButton .embeddedServiceIcon::before {
 				font-family: “embeddedserviceiconfont”;
 				font-size: 5px;
-				content: url(https://capitaland--prodtest.sandbox.my.site.com/resource/1670205590000/casey_36x26) !important;
+				content: url(https://capitaland--prodtest.sandbox.my.site.com/rresource/1670205799000/casey_svg?) !important;
 				speak: none;
 				text-rendering: auto;
 				font-weight: normal;
