--- a/prodTest.html
+++ b/prodTest.html
@@ -26,7 +26,7 @@
 			
 			.embeddedServiceHelpButton .embeddedServiceIcon::before {
 				font-family: “embeddedserviceiconfont”;
-				font-size: 5px;
+				font-size: 1.25em;
 				content: url(https://capitaland--prodtest.sandbox.my.site.com/rresource/1670205799000/casey_svg?) !important;
 				speak: none;
 				text-rendering: auto;
