--- a/prodTest.html
+++ b/prodTest.html
@@ -27,7 +27,7 @@
 			.embeddedServiceHelpButton .embeddedServiceIcon::before {
 				font-family: “embeddedserviceiconfont”;
 				font-size: 1.25em;
-				content: url(https://capitaland--prodtest.sandbox.my.site.com/resource/1669602911000/casey40x40?) !important;
+				content: url(https://capitaland--prodtest.sandbox.my.site.com/resource/1669696394000/casey_Original) !important;
 				speak: none;
 				text-rendering: auto;
 				font-weight: normal;
