--- a/avatarURL.html
+++ b/avatarURL.html
@@ -30,10 +30,10 @@
 
 		embedded_svc.settings.defaultMinimizedText = 'Chat with us'; //(Defaults to Chat with an Expert)
 		//embedded_svc.settings.disabledMinimizedText = '...'; //(Defaults to Agent Offline)
-		//Chat Icons 
-		embedded_svc.settings.smallCompanyLogoImgURL = 'https://capitaland--prodtest.sandbox.my.site.com/resource/1669696394000/casey_Original';
-		embedded_svc.settings.avatarImgURL = 'https://capitaland--prodtest.sandbox.my.site.com/resource/resource/1669696394000/casey_Original';
-		embedded_svc.settings.chatbotAvatarImgURL = 'https://capitaland--prodtest.sandbox.my.site.com/resource/1669696394000/casey_Original';
+		//Chat Icons - URL path	
+				embedded_svc.settings.smallCompanyLogoImgURL = 'https://capitastar.force.com/resource/1672813281000/casey_icon_original?';
+				embedded_svc.settings.avatarImgURL = 'https://capitastar.force.com/resource/1672813281000/casey_icon_original?';
+				embedded_svc.settings.chatbotAvatarImgURL = 'https://capitastar.force.com/resource/1672813281000/casey_icon_original?';
 		
 
 		//embedded_svc.settings.loadingText = ''; //(Defaults to Loading)
