--- a/prodTest.html
+++ b/prodTest.html
@@ -25,6 +25,10 @@
             }
 			
         </style>
+	
+	window.onload=function(){
+ 		document.getElementById("uiButton").click();
+	};
 
 
 <script type='text/javascript' src='https://service.force.com/embeddedservice/5.0/esw.min.js'></script>
