--- a/prodTest.html
+++ b/prodTest.html
@@ -25,11 +25,11 @@
             }
 			
         </style>
-	
-	window.onload=function(){
- 		document.getElementById("uiButton").click();
-	};
-
+	<script>
+		window.onload=function(){
+			document.getElementById("uiButton").click();
+		};
+	</script>
 
 <script type='text/javascript' src='https://service.force.com/embeddedservice/5.0/esw.min.js'></script>
 <style type='text/css'>
