--- a/prodTest.html
+++ b/prodTest.html
@@ -27,7 +27,7 @@
         </style>
 	<script>
 		window.onload=function(){
-			document.getElementById("uiButton").click();
+			document.getElementByClass("uiButton").click();
 		};
 	</script>
 
