--- a/prodTest.html
+++ b/prodTest.html
@@ -115,8 +115,8 @@
 </script>
 </head>	
 <body>
-The content of the body element is displayed in your browser.
-<h1>CHATBOT EMBEDDING</h1>
+
+<h1>CHATBOT EMBEDDING - SandBox Chatbot</h1>
 </body>
 
 </html>
