--- a/prodTest.html
+++ b/prodTest.html
@@ -75,6 +75,8 @@
 		embedded_svc.settings.enabledFeatures = ['LiveAgent'];
 		embedded_svc.settings.entryFeature = 'LiveAgent';
 		
+		embedded_svc.bootstrapEmbeddedService();
+		
 		embedded_svc.settings.extraPrechatFormDetails = [
                     {"label":"First Name", "transcriptFields": ["Customer_First_Name__c"]},
                     {"label":"Last Name", "transcriptFields": ["Customer_Last_Name__c"]},
