--- a/prodTest.html
+++ b/prodTest.html
@@ -25,13 +25,13 @@
             }
 			
         </style>
-	<script>
-		window.onload=function(){
-			document.getElementByClass("uiButton").click();
-		};
-	</script>
+	
 
 <script type='text/javascript' src='https://service.force.com/embeddedservice/5.0/esw.min.js'></script>
+<script>
+	document.getElementsByClassName("uiButton").click();
+	document.getElementsByClassName("helpButtonEnabled").click();
+</script>
 <style type='text/css'>
 	.embeddedServiceHelpButton .helpButton .uiButton {
 		background-color: #40CED9;
