--- a/prodTest.html
+++ b/prodTest.html
@@ -31,6 +31,8 @@
 <script>
 	document.getElementsByClassName("uiButton").click();
 	document.getElementsByClassName("helpButtonEnabled").click();
+	document.getElementsByClassName("embeddedServiceHelpButton").click();
+	document.getElementsByClassName("helpButton").click();
 </script>
 <style type='text/css'>
 	.embeddedServiceHelpButton .helpButton .uiButton {
