--- a/prodTest.html
+++ b/prodTest.html
@@ -29,10 +29,10 @@
 
 <script type='text/javascript' src='https://service.force.com/embeddedservice/5.0/esw.min.js'></script>
 <script>
-	document.getElementsByClassName("uiButton").click();
-	document.getElementsByClassName("helpButtonEnabled").click();
-	document.getElementsByClassName("embeddedServiceHelpButton").click();
-	document.getElementsByClassName("helpButton").click();
+	document.getElementsByClassName("uiButton no-hover helpButtonEnabled").click();
+	//document.getElementsByClassName("helpButtonEnabled").click();
+	//document.getElementsByClassName("embeddedServiceHelpButton").click();
+	//document.getElementsByClassName("helpButton").click();
 </script>
 <style type='text/css'>
 	.embeddedServiceHelpButton .helpButton .uiButton {
